// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Showcase ExtensionUnion should combine mentions emoji and links 1`] = `
<a role="presentation"
   href="/awesome"
   class="mention mention-tag"
   data-mention-id="awesome"
   data-mention-name="tag"
>
  #awesome
</a>
hello
<a role="presentation"
   href="/ab"
   class="mention mention-at"
   data-mention-id="ab"
   data-mention-name="at"
>
  @ab
</a>
😀
<a href="//google.com"
   role="presentation"
>
  google.com
</a>
`;

exports[`Social Showcase ExtensionUnion should not replace emoji with link when no space between 1`] = `
😀
<a href="//google.com"
   role="presentation"
>
  google.com
</a>
`;

exports[`Social Showcase Links can handle more complex interactions 1`] = `
this is the first
<a href="//url.com"
   role="presentation"
>
  url.com
</a>
`;

exports[`Social Showcase Links should have a social editor 1`] = `
This is text
<a href="https://url.com"
   role="presentation"
>
  https://url.com
</a>
`;

exports[`Social Showcase Links should parse simple urls 1`] = `
<a href="//url.com"
   role="presentation"
>
  url.com
</a>
`;

exports[`Social Showcase Links should parse simple urls 2`] = `
<a href="//url.co"
   role="presentation"
>
  url.co
</a>
`;

exports[`Social Showcase Links should parse simple urls 3`] = `
<a href="//url.co.uk"
   role="presentation"
>
  url.co.uk
</a>
`;

exports[`Social Showcase Mentions @ should not trap the arrow keys 1`] = `
<p class>
  12
  <a role="presentation"
     href="/a"
     class="mention mention-at"
     data-mention-id="a"
     data-mention-name="at"
  >
    @a
  </a>
</p>
`;
